2006-04-01 (?)
	* xcap queries goes through xcap module if compiled with SER (removes
	dependency on libcurl3 for PA module)

2006-03-30
	* corrected bug (library couldn't be compiled)

2006-03-29
	* added message authorization functions

2006-03-24
	* optimized XCAP document access - each process has its own curl handle